Fix   - 메인 페이지 배너 텍스트 스타일 변경   - 모바일 뷰 메뉴 화면 z-index로 인해 깨지는 부분 수정

--- a/public/css/snack.css
+++ b/public/css/snack.css
@@ -49,7 +49,8 @@
   padding: 12px 24px;
   box-sizing: border-box;
   background: #e73b63;
-  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2); }
+  box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
+  z-index: 1; }
   @media (max-width: 959px) {
     #header {
       justify-content: center; } }
