--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -87,5 +87,23 @@
     font-size: 32px;
     line-height: 32px;
     animation: marquee 20s linear forwards;
+    @include mobile {
+      white-space: break-spaces;
+      word-break: keep-all;
+      font-size: 24px;
+      line-height: 28px;
+      width: 100%;
+      padding: 6px 36px 0;
+      text-align: center;
+    }
+    @include tablet {
+      font-size: 28px;
+      white-space: break-spaces;
+      word-break: keep-all;
+      line-height: 32px;
+      width: 100%;
+      padding: 6px 36px 0;
+      text-align: center;
+    }
   }
 }
